# power_house-verifier

./: DEVELOPMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml
benchmarks/: results.txt  run_benchmarks.py
docs/: convergence_analysis.md
examples/: compound_verification_demo.py  scaling_demo.py
power_house_verifier/: __init__.py  adversarial.py  cli.py  engine.py
powerhouse/: __init__.py  cli.py  core.py
tests/: test_adversarial.py  test_core.py  test_scaling.py
