[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-house-verifier"
version = "1.0.0"
description = "Exact probabilistic closure engine for sextillion-scale verification. The official Python implementation of Powerhouse."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "MFENX" }]
keywords = ["powerhouse", "verification", "probabilistic", "closure", "sextillion", "scale", "finalization", "respiratory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/JROChub/power_house-verifier"
Repository = "https://github.com/JROChub/power_house-verifier"

[project.scripts]
powerhouse = "powerhouse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["powerhouse"]
